add requirements back

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -36,8 +36,7 @@ jobs:
         with:
           python-version: '3.9' # Choose the Python version you need
           cache: 'pip' # caching pip dependencies
-      - run: pip install -r requirements.txt
-      - run: pip install "pillow==10.2.0"
+      - run: pip install -r .github/workflows/requirements.txt
       - name: Build esphome
         uses: esphome/build-action@v1.8.0
         with:
