add more requirements and pip e

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -37,6 +37,7 @@ jobs:
           python-version: '3.9' # Choose the Python version you need
           cache: 'pip' # caching pip dependencies
       - run: pip install -r .github/workflows/requirements.txt
+      - run: pip install -e .
       - name: Build esphome
         uses: esphome/build-action@v1.8.0
         with:
