--- a/common/ipod/lilygo_tdisplay_ipod_binary_sensor_pcf.yaml
+++ b/common/ipod/lilygo_tdisplay_ipod_binary_sensor_pcf.yaml
@@ -17,6 +17,7 @@ binary_sensor:
   - platform: gpio
     pin:
       number: $screen_left_pin
+      allow_other_uses: true
       inverted: true
       mode:
         input: true
