use esphome remote fonts

--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -22,15 +22,12 @@ wifi: # setup wifi, make sure secrets.yaml exists!
 
 external_components:
   - source:
-      # type: git
-      # url: https://github.com/landonr/homeThing
-      # ref: lando/boot_image
-      type: local
-      path: components
+      type: git
+      url: https://github.com/landonr/homeThing
+      # type: local
+      # path: components
     refresh: 0s
     components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying, homeThingAppWeather]
-  - source: github://pr#5254 # used to load fonts on compile
-    components: [ font ]
   - source:
       type: git
       url: https://github.com/landonr/esphome-components
