--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -63,6 +63,8 @@ packages: # maybe modify: include default ipod controls
       common/ipod/lilygo_tdisplay_ipod_battery.yaml, # used for battery percent
       common/ipod/lilygo_tdisplay_ipod_binary_sensor_pcf.yaml, # used for button controls
       common/ipod/lilygo_tdisplay_ipod_rotary.yaml, # used for rotary controls
+      common/ipod/lilygo_tdisplay_ipod_binary_sensor_seesaw.yaml, # used for seesaw button controls
+      common/ipod/lilygo_tdisplay_ipod_rotary_seesaw.yaml, # used for seesaw rotary controls
       common/ipod/lilygo_tdisplay_ipod_sleep.yaml, # required for device to sleep
       common/tdisplay-s3/backlight.yaml, # backlight
       common/fonts.yaml, # default font
