--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -27,7 +27,9 @@ jobs:
           exclude: './components/homeThing/version.h'
           clangFormatVersion: 15
       - name: "Replace branch reference"
-        run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.devices }}.yaml
+        run: |
+          sed -i "s#\(github://\${{ github.repository }}\)\(@[^ ]*\)\?#\1@\${{ github.head_ref }}#" ${{ matrix.devices }}.yaml
+          sed -i "s#\(url: https://github.com/landonr/homeThing\)\(.*ref: \)[^ ]*#\1\2\${{ github.head_ref }}#" ${{ matrix.devices }}.yaml
       - name: Create file
         run: |
           echo "d2lmaV9ic3NpZDogIjFDOjg3OjJDOjcwOkMyOkMyIgp3aWZpX3NzaWQ6ICJzc2lkIgp3aWZpX3Bhc3N3b3JkOiAid2lmaXBhc3MiCndpZmlfZmFsbGJhY2tfcGFzc3dvcmQ6ICJ3aWZpZmFsbGJhY2twYXNzIgphcGlfZW5jcnlwdGlvbjogImFwaWVuY3J5cHRpb24iCm90YV9lbmNyeXB0aW9uOiAib3RhZW5jcnlwdGlvbiIK" | base64 --decode > secrets.yaml
