Cleanup remote packages (#109)
* update package ref for current branch

* undo seesaw change

* test using  new file

* update ci action

* undo ci change

* add note about images needing pillow

* undo other seesaw change

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,7 +26,7 @@ jobs:
           style: file
           exclude: './components/homeThing/version.h'
           clangFormatVersion: 15
-      - name: "Replace branch reference"
+      - name: "Replace component branch reference"
         run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.devices }}.yaml
       - name: Create file
         run: |
