--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -39,7 +39,7 @@ jobs:
         name: ${{ fromJSON(needs.matrix_maker.outputs.matrix) }}
     steps:
       - name: "Replace component branch reference"
-        run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.name }}
+        run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.devices }}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: CLang Format Lint
