--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,10 +38,10 @@ jobs:
       matrix:
         name: ${{ fromJSON(needs.matrix_maker.outputs.matrix) }}
     steps:
-      - name: "Replace component branch reference"
-        run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.devices }}
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: "Replace component branch reference"
+        run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.name }}
       - name: CLang Format Lint
         uses: DoozyX/clang-format-lint-action@v0.15
         with:
