--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: "Replace component branch reference"
-        run: sed -i "s#\(github://${{ github.repository }}\)\(@[^ ]*\)\?#\1@${{ github.head_ref }}#" ${{ matrix.name }}
+        run: sed -i "s/@main #update_to_current_ref/@{{ github.current_ref }}/g" ${{ matrix.name }}
       - name: CLang Format Lint
         uses: DoozyX/clang-format-lint-action@v0.15
         with:
