captive portal for wifi config

--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -6,12 +6,17 @@ esp32:
   framework:
     type: arduino
 
-wifi: # setup wifi, make sure secrets.yaml exists!
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-  id: wifi_id
-  power_save_mode: HIGH
+# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
+captive_portal:
+
+wifi:
+  # ssid: !secret wifi_ssid
+  # password: !secret wifi_password
+  # fast_connect: true
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  ap:
+    ssid: "homeThing Fallback Hotspot"
 
 external_components: #include homething, and esphome-components
   - source: github://landonr/homeThing
