--- a/tdisplay-megadesk.yaml
+++ b/tdisplay-megadesk.yaml
@@ -16,12 +16,17 @@ esphome:
 esp32:
   board: featheresp32
 
+# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
+captive_portal:
+
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-  id: wifi_id
-  power_save_mode: HIGH
+  # ssid: !secret wifi_ssid
+  # password: !secret wifi_password
+  # fast_connect: true
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  ap:
+    ssid: "homeThing Fallback Hotspot"
 
 substitutions:
   friendly_name: "mega homething"
