--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -3,14 +3,17 @@ esphome:
   platform: ESP32
   board: m5stack-fire
 
+# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
+captive_portal:
+
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-  id: wifi_id
+  # ssid: !secret wifi_ssid
+  # password: !secret wifi_password
+  # fast_connect: true
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "${friendly_name} Fallback"
-    password: !secret wifi_fallback_password
+    ssid: "homeThing Fallback Hotspot"
 
 external_components:
   - source:
