--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -6,14 +6,18 @@ esp32:
   framework:
     type: arduino
 
+# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
+captive_portal:
+
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-  id: wifi_id
+  # ssid: !secret wifi_ssid
+  # password: !secret wifi_password
+  # fast_connect: true
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "${friendly_name} Fallback"
-    password: !secret wifi_fallback_password
+    ssid: "homeThing Fallback Hotspot"
+
 
 external_components:
   - source: github://landonr/homeThing
