--- a/debug.yaml
+++ b/debug.yaml
@@ -12,11 +12,17 @@ esp32:
 logger:
   level: DEBUG
 
-wifi: # setup wifi, make sure secrets.yaml exists!
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  fast_connect: true
-  id: wifi_id
+# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
+captive_portal:
+
+wifi:
+  # ssid: !secret wifi_ssid
+  # password: !secret wifi_password
+  # fast_connect: true
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  ap:
+    ssid: "homeThing Fallback Hotspot"
 
 external_components:
   - source:
