--- a/basic.yaml
+++ b/basic.yaml
@@ -6,21 +6,6 @@ api:
 esp32:
   board: featheresp32
 
-logger:
-  level: DEBUG
-
-# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
-captive_portal:
-
-wifi:
-  # ssid: !secret wifi_ssid
-  # password: !secret wifi_password
-  # fast_connect: true
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "homeThing Fallback Hotspot"
-
 external_components:
   - source: github://landonr/homeThing
       # type: local
@@ -36,6 +21,10 @@ substitutions: # set friendly name
   friendly_name: "homething-basic"
 
 packages:
+  # common
+  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
+
+  # fonts
   fonts_roboto: github://landonr/homeThing/common/fonts-roboto.yaml@main
   icon_fonts: github://landonr/homeThing/common/icon_fonts.yaml@main
 
