--- a/debug.yaml
+++ b/debug.yaml
@@ -51,11 +51,12 @@ external_components:
     ]
 
 packages: # maybe modify: include default ipod controls
+  # common
+  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
   remote_package:
     url: https://github.com/landonr/homeThing
     ref: main
     files: [
-      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts-roboto.yaml, # default font
       common/icon_fonts-local.yaml, # material icons
       common/settings.yaml, # settings screen
