--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -49,11 +49,12 @@ external_components:
     ]
 
 packages: # maybe modify: include default ipod controls
+  # common
+  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
   remote_package:
     url: https://github.com/landonr/homeThing
     ref: main
     files: [
-      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/ipod/lilygo_tdisplay_ipod_backlight.yaml, # used for toggling backlight
       common/ipod/lilygo_tdisplay_ipod_battery.yaml, # used for battery percent
       common/ipod/lilygo_tdisplay_ipod_binary_sensor.yaml, # used for button controls
