--- a/tdisplay-t4.yaml
+++ b/tdisplay-t4.yaml
@@ -18,7 +18,6 @@ wifi:
   ap:
     ssid: "homeThing Fallback Hotspot"
 
-
 external_components:
   - source: github://landonr/homeThing
       # type: local
@@ -42,11 +41,12 @@ external_components:
     ]
 
 packages: # maybe modify: include default ipod controls
+  # common
+  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
   remote_package:
     url: https://github.com/landonr/homeThing
     ref: main
     files: [
-      common/device_base.yaml, # defines api, ota, free memory and uptime sensor
       common/fonts.yaml, # default font
       common/icon_fonts.yaml, # material icons
       common/settings.yaml, # settings screen
