remove #update_to_head_ref

--- a/basic.yaml
+++ b/basic.yaml
@@ -22,7 +22,7 @@ substitutions: # set friendly name
 
 packages:
   # common
-  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
+  device_base: github://landonr/homeThing/common/device_base_light.yaml@main
 
   # fonts
   fonts_roboto: github://landonr/homeThing/common/fonts-roboto.yaml@main
