--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -41,7 +41,7 @@ external_components:
 
 packages: # maybe modify: include default ipod controls
   # common
-  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
+  device_base: github://landonr/homeThing/common/device_base.yaml@main
   remote_package:
     url: https://github.com/landonr/homeThing
     ref: main
