--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -38,7 +38,7 @@ external_components:
 
 packages: # maybe modify: include default ipod controls
   # common
-  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
+  device_base: github://landonr/homeThing/common/device_base_light.yaml@main
   
   # needs to be updated to above format
   remote_package:
