Boot crash fix (#115)
* fix menu selection when skipping boot, and crash on now playing without player

* update launch image url

* add device base light

* update wifi settings for ipod

* add comments

* remove #update_to_head_ref

--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -14,18 +14,6 @@ esphome:
 esp32:
   board: featheresp32
 
-# WiFi Configuration, uncomment and fill secrets.yaml with wifi_ssid and wifi_password to enable fast connect
-captive_portal:
-
-wifi:
-  # ssid: !secret wifi_ssid
-  # password: !secret wifi_password
-  # fast_connect: true
-
-  # Enable fallback hotspot (captive portal) in case wifi connection fails
-  ap:
-    ssid: "homeThing Fallback Hotspot"
-
 external_components:
   - source:
       type: git
@@ -50,7 +38,9 @@ external_components:
 
 packages: # maybe modify: include default ipod controls
   # common
-  device_base: github://landonr/homeThing/common/device_base.yaml@main #update_to_head_ref
+  device_base: github://landonr/homeThing/common/device_base_light.yaml@main
+  
+  # needs to be updated to above format
   remote_package:
     url: https://github.com/landonr/homeThing
     ref: main
