--- a/tdisplay-ipod.yaml
+++ b/tdisplay-ipod.yaml
@@ -53,7 +53,6 @@ packages: # maybe modify: include default ipod controls
       common/fonts.yaml, # default font
       common/icon_fonts.yaml, # material icons
       common/settings.yaml, # settings screen
-      common/images.yaml, # boot screen image
       common/images-weather.yaml, # weather images
     ]
     refresh: 0s
@@ -159,6 +158,9 @@ homeThing:
   id: homeThingMenu
   settings:
     sleep_after: 14400
+  boot:
+    api_connected: api_connected
+    launch_image: launch_image    
   sleep_switch: sleep_toggle
   backlight: backlight
   battery:
