--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -23,7 +23,7 @@ external_components:
   - source: github://landonr/lilygo-tdisplays3-esphome@v0.1
     components: [tdisplays3]
     refresh: 0s
-  - source: github://landonr/homeThing@main@main #update_to_head_ref
+  - source: github://landonr/homeThing@main #update_to_head_ref
   # - source:      
   #     type: local
   #     path: components
