--- a/tdisplay-s3.yaml
+++ b/tdisplay-s3.yaml
@@ -23,9 +23,10 @@ external_components:
   - source: github://landonr/lilygo-tdisplays3-esphome@v0.1
     components: [tdisplays3]
     refresh: 0s
-  - source: github://landonr/homeThing@main
-      # type: local
-      # path: components
+  - source: github://landonr/homeThing@main #update_to_head_ref
+  # - source:      
+  #     type: local
+  #     path: components
     refresh: 0s
     components: [homeThing, homeThingDisplayState, homeThingApp, homeThingAppNowPlaying, homeThingAppSnake, homeThingAppCatToy, homeThingAppBreakout, homeThingAppWeather]
   - source:
@@ -233,25 +234,26 @@ voice_assistant:
   microphone: external_mic
   on_start:
     then:
-      lambda: |-
-        id(homeThingMenu)->clearNotifications();
-        id(homeThingMenu)->addNotification("Voice Assistant", "Listening", "", true);
-        return;
+      - homething_menu.clear_notifications: homeThingMenu
+      - homething_menu.add_notification:
+          title: "Voice Assistant"
+          subtitle: "Listening"
   on_error:
     then:
-      lambda: |-
-        id(homeThingMenu)->addNotification("Voice Assistant", "Error", message, false);
-        return;
+      - homething_menu.add_notification: 
+          title: "Voice Assistant"
+          subtitle: "Error"
+          message:  |-
+            return x;
+          persistent: true
   on_stt_end:
     then:
-      lambda: |-
-        id(homeThingMenu)->addNotification("Voice Assistant", "Understood", x, false);
-        return;
-  on_tts_start:
-    then:
-      lambda: |-
-        id(homeThingMenu)->addNotification("Voice Assistant", "Finished", x, true);
-        return;
+      - homething_menu.add_notification: 
+          title: "Voice Assistant"
+          subtitle: "Understood"
+          message: |-
+            return x;
+          persistent: true
 
 ### Weather App
 
