--- a/m5stack-fire.yaml
+++ b/m5stack-fire.yaml
@@ -201,6 +201,8 @@ homeThing:
           type: sensor
         - id: wifi_ip
           type: text_sensor
+        - id: reset_switch
+          type: switch
 
 spi:
   clk_pin: 18
